z-index fix

--- a/src/app/modules/endpoint-state/components/endpoint-state.component.css
+++ b/src/app/modules/endpoint-state/components/endpoint-state.component.css
@@ -177,7 +177,7 @@
   left: 0;
   right: 0;
   bottom: 0;
-  z-index: 1000; /* Specify a stack order in case you're using a different order for other elements */
+  z-index: 1100; /* Specify a stack order in case you're using a different order for other elements */
   animation: fadein 0.3s ease-in-out;
   /*opacity:0.5;*/
   background-color:rgba(120,120,120,0.4);
@@ -191,7 +191,7 @@
   transform: translate(-50%,-50%);
   -ms-transform: translate(-50%,-50%);
   animation: fadein 0.3s ease-in-out;
-  z-index:1001;
+  z-index:1101;
 }
 
 @keyframes fadein {
